--- a/tp_3_vsoc_gui/pom.xml
+++ b/tp_3_vsoc_gui/pom.xml
@@ -17,7 +17,9 @@
 		<version>2.0.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
+	<build>
+		<finalName>vsoc-jenkins-docker-integration</finalName>
+	</build>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
