--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,7 @@
 		<version>2.0.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<build>
-		<finalName>vsoc-jenkins-docker-integration</finalName>
-	</build>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -44,6 +42,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>vsoc-jdi</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
